fix admin products delete

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,25 +1,41 @@
 {
-  "navbar.authorized_distributor": "موزع معتمد",
-  "navbar.authorized_distributor_logo_alt": "شعار الموزع المعتمد",
-  "navbar.main_navigation": "القائمة الرئيسية",
-  "navbar.toggle_navigation": "تبديل القائمة",
-  "navbar.home": "الرئيسية",
-  "navbar.about_us": "من نحن",
-  "navbar.products": "المنتجات",
-  "navbar.gallery": "المعرض",
-  "navbar.contact": "اتصل بنا",
-  "navbar.open_cart": "فتح سلة التسوق",
-  "navbar.your_cart": "سلة التسوق الخاصة بك",
-  "navbar.loading_cart": "جارٍ تحميل السلة...",
-  "navbar.subtotal": "المجموع الفرعي",
-  "navbar.view_cart": "عرض السلة",
-  "navbar.checkout": "إتمام الشراء",
-  "navbar.homepage": "الصفحة الرئيسية",
-  "navbar.brand_logo": "شعار العلامة التجارية",
+    "navbar.authorized_distributor": "موزع معتمد",
+    "navbar.authorized_distributor_logo_alt": "شعار الموزع المعتمد",
+    "navbar.main_navigation": "القائمة الرئيسية",
+    "navbar.toggle_navigation": "تبديل القائمة",
+    "navbar.home": "الرئيسية",
+    "navbar.about_us": "من نحن",
+    "navbar.products": "المنتجات",
+    "navbar.gallery": "المعرض",
+    "navbar.contact": "اتصل بنا",
+    "navbar.open_cart": "فتح سلة التسوق",
+    "navbar.your_cart": "سلة التسوق الخاصة بك",
+    "navbar.loading_cart": "جارٍ تحميل السلة...",
+    "navbar.subtotal": "المجموع الفرعي",
+    "navbar.view_cart": "عرض السلة",
+    "navbar.checkout": "إتمام الشراء",
+    "navbar.homepage": "الصفحة الرئيسية",
+    "navbar.brand_logo": "شعار العلامة التجارية",
     "navbar.arabic": "العربية",
-  "navbar.english": "الانجليزية",
+    "navbar.english": "الإنجليزية",
+    "navbar.social_facebook": "فيسبوك",
+    "navbar.social_instagram": "إنستغرام",
+    "navbar.social_youtube": "يوتيوب",
+    "navbar.locale_switcher": "تغيير اللغة أو العملة",
+    "navbar.language": "اللغة",
+    "navbar.currency": "العملة",
+    "navbar.cart_empty": "سلة التسوق فارغة",
+    "navbar.remove_item": "إزالة العنصر",
+    "navbar.error_loading_cart": "خطأ في تحميل السلة",
+    "navbar.error_removing_item": "خطأ في إزالة العنصر",
+    "navbar.account": "الحساب",
+    "navbar.login": "تسجيل الدخول",
+    "navbar.register": "إنشاء حساب",
+    "navbar.dashboard": "لوحة التحكم",
+    "navbar.profile": "الملف الشخصي",
+    "navbar.logout": "تسجيل الخروج",
 
-   "auth.create_account": "إنشاء حسابك",
+    "auth.create_account": "إنشاء حسابك",
     "auth.full_name": "الاسم الكامل",
     "auth.enter_full_name": "أدخل اسمك الكامل",
     "auth.email": "عنوان البريد الإلكتروني",
@@ -52,86 +68,158 @@
     "auth.please_fix_errors": "يرجى تصحيح الأخطاء في النموذج.",
 
     "footer.company_logo_alt": "شعار شركة جيروزاليم إكسبريس فريت",
-  "footer.company_tagline": "جيروزاليم إكسبريس فريت",
-  "footer.quick_links": "روابط سريعة",
-  "footer.home": "الرئيسية",
-  "footer.about_us": "من نحن",
-  "footer.products": "المنتجات",
-  "footer.gallery": "المعرض",
-  "footer.contact": "اتصل بنا",
-  "footer.contact_us": "تواصل معنا",
-  "footer.authorized_distributor": "موزع معتمد",
-  "footer.distributor_logo_alt": "شعار موزع هاي جين المعتمد",
+    "footer.company_tagline": "جيروزاليم إكسبريس فريت",
+    "footer.quick_links": "روابط سريعة",
+    "footer.home": "الرئيسية",
+    "footer.about_us": "من نحن",
+    "footer.products": "المنتجات",
+    "footer.gallery": "المعرض",
+    "footer.contact": "اتصل بنا",
+    "footer.contact_us": "تواصل معنا",
+    "footer.authorized_distributor": "موزع معتمد",
+    "footer.distributor_logo_alt": "شعار موزع هاي جين المعتمد",
 
     "home.about_section_aria": "قسم من نحن",
-  "home.about_main_image_alt": "الصورة الرئيسية لقسم من نحن",
-  "home.about_small_image_alt": "الصورة الصغيرة لقسم من نحن",
-  "home.about_heading": "من نحن",
-  "home.products_title": "المنتجات",
-  "home.view_all_products": "جميع المنتجات",
-  "home.unnamed_product": "منتج بدون اسم",
-  "home.view_product": "عرض المنتج",
-  "home.currency": "دينار",
-  "home.top_categories": "أفضل الفئات",
-  "home.items": "عنصر",
-
+    "home.about_main_image_alt": "الصورة الرئيسية لقسم من نحن",
+    "home.about_small_image_alt": "الصورة الصغيرة لقسم من نحن",
+    "home.about_heading": "من نحن",
+    "home.products_title": "المنتجات",
+    "home.view_all_products": "جميع المنتجات",
+    "home.unnamed_product": "منتج بدون اسم",
+    "home.view_product": "عرض المنتج",
+    "home.currency": "د.أ",
+    "home.top_categories": "أفضل الفئات",
+    "home.items": "عنصر",
     "home.shop_now": "تسوق الآن",
-
-  "home.feature_delivery_title": "التوصيل",
-  "home.feature_delivery_desc": "سريع وآمن",
-
-  "home.feature_refund_title": "استرجاع الأموال",
-  "home.feature_refund_desc": "استرجاع خلال 30 يومًا",
-
-  "home.feature_payment_title": "دفع آمن",
-  "home.feature_payment_desc": "دفع مضمون 100٪",
-
-  "home.feature_support_title": "دعم 24/7",
-  "home.feature_support_desc": "لا تتردد في الاتصال بنا",
+    "home.feature_delivery_title": "التوصيل",
+    "home.feature_delivery_desc": "سريع وآمن",
+    "home.feature_refund_title": "استرجاع الأموال",
+    "home.feature_refund_desc": "استرجاع خلال 30 يومًا",
+    "home.feature_payment_title": "دفع آمن",
+    "home.feature_payment_desc": "دفع مضمون 100٪",
+    "home.feature_support_title": "دعم 24/7",
+    "home.feature_support_desc": "لا تتردد في الاتصال بنا",
     "home.banner_title": "نظافة تدوم معك",
-      "about.default_title": "عن شركتنا",
-  "about.default_description": "نلتزم بتقديم منتجات عالية الجودة وخدمة استثنائية لعملائنا.",
-  "about.slider_title_default": "ميزة مميزة",
-  "about.slider_text_default": "نسعى جاهدين للتميز في كل ما نقوم به.",
-  "about.main_image_alt": "صورة قسم من نحن",
-   "cart.title": "سلة التسوق",
-  "cart.product": "المنتج",
-  "cart.price": "السعر",
-  "cart.quantity": "الكمية",
-  "cart.total": "الإجمالي",
-  "cart.actions": "الإجراءات",
-  "cart.only_stock_left": "متبقي فقط :stock في المخزون!",
-  "cart.decrease_qty": "تقليل الكمية",
-  "cart.increase_qty": "زيادة الكمية",
-  "cart.remove": "إزالة",
-  "cart.update": "تحديث السلة",
-  "cart.empty": "سلتك فارغة.",
-  "cart.continue": "متابعة التسوق",
-  "cart.summary": "إجمالي السلة",
-  "cart.subtotal": "المجموع الفرعي",
-  "cart.shipping": "الشحن",
-  "cart.free": "مجاني",
-  "cart.tax": "الضريبة (16%)",
-  "cart.grand_total": "الإجمالي الكلي",
-  "cart.checkout": "المتابعة لإتمام الشراء",
-  "cart.secure_checkout": "دفع آمن باستخدام SSL",
-  "cart.have_coupon": "هل لديك كوبون خصم؟",
-  "cart.enter_code": "أدخل الرمز",
-  "cart.apply": "تطبيق",
-  "cart.client_dashboard": "لوحة تحكم العميل",
 
-   "contact.title": "تواصل معنا",
-  "contact.subtitle": "يسعدنا سماع آرائكم، يرجى ترك رسالتكم أدناه.",
-  "contact.placeholder_name": "الاسم",
-  "contact.placeholder_number": "رقم الهاتف",
-  "contact.placeholder_email": "البريد الإلكتروني",
-  "contact.placeholder_message": "الرسالة",
-  "contact.send_button": "إرسال الطلب",
-  "contact.info_title": "يحبنا أصحاب المنازل!",
-  "contact.info_description": "بيئة صحية لعائلتك. الأنظمة التي نقدمها توفر خدمة عالية الجودة مع التركيز على الأمان.",
-  "contact.default_address": "العبدلي، أم أذينة",
-  "contact.working_hours": "الأحد - الخميس: 8:00 صباحًا - 6:00 مساءً",
+    "about.default_title": "عن شركتنا",
+    "about.default_description": "نلتزم بتقديم منتجات عالية الجودة وخدمة استثنائية لعملائنا.",
+    "about.slider_title_default": "ميزة مميزة",
+    "about.slider_text_default": "نسعى جاهدين للتميز في كل ما نقوم به.",
+    "about.main_image_alt": "صورة قسم من نحن",
 
+    "cart.title": "سلة التسوق",
+    "cart.product": "المنتج",
+    "cart.price": "السعر",
+    "cart.quantity": "الكمية",
+    "cart.total": "الإجمالي",
+    "cart.actions": "الإجراءات",
+    "cart.only_stock_left": "متبقي فقط :stock في المخزون!",
+    "cart.decrease_qty": "تقليل الكمية",
+    "cart.increase_qty": "زيادة الكمية",
+    "cart.remove": "إزالة",
+    "cart.update": "تحديث السلة",
+    "cart.empty": "سلتك فارغة.",
+    "cart.continue": "متابعة التسوق",
+    "cart.summary": "إجمالي السلة",
+    "cart.subtotal": "المجموع الفرعي",
+    "cart.shipping": "الشحن",
+    "cart.free": "مجاني",
+    "cart.tax": "الضريبة (16%)",
+    "cart.grand_total": "الإجمالي الكلي",
+    "cart.checkout": "المتابعة لإتمام الشراء",
+    "cart.secure_checkout": "دفع آمن باستخدام SSL",
+    "cart.have_coupon": "هل لديك كوبون خصم؟",
+    "cart.enter_code": "أدخل الرمز",
+    "cart.apply": "تطبيق",
+    "cart.client_dashboard": "لوحة تحكم العميل",
+    "cart.select_shipping_area": "اختر منطقة الشحن",
+    "cart.cod": "الدفع عند الاستلام",
+    "cart.already_account": "هل لديك حساب؟",
+    "cart.log_in_or": "سجّل الدخول أو",
+    "cart.join_us": "انضم إلينا الآن",
+    "cart.to_save_details": "لحفظ بياناتك والاستمتاع بعملية شراء أسرع!",
+    "cart.log_in": "تسجيل الدخول",
+    "cart.shipping_information": "معلومات الشحن",
+    "cart.full_name": "الاسم الكامل",
+    "cart.enter_full_name": "أدخل اسمك الكامل",
+    "cart.email": "البريد الإلكتروني",
+    "cart.enter_email": "أدخل بريدك الإلكتروني",
+    "cart.phone_number": "رقم الهاتف",
+    "cart.enter_phone_number": "أدخل رقم هاتفك",
+    "cart.shipping_area": "منطقة الشحن",
+    "cart.enter_shipping_area": "أدخل مدينتك أو منطقتك (اختياري)",
+    "cart.shipping_address": "عنوان الشحن",
+    "cart.enter_shipping_address": "أدخل عنوانك الكامل",
+    "cart.note": "ملاحظة",
+    "cart.optional": "اختياري",
+    "cart.enter_note": "أضف أي تعليمات أو ملاحظات للتوصيل",
+    "cart.payment_method": "طريقة الدفع",
+    "cart.cash_on_delivery": "الدفع عند الاستلام",
+    "cart.credit_debit_card": "بطاقة ائتمان/خصم",
+    "cart.paypal": "باي بال",
+    "cart.stripe": "سترايب",
+    "cart.bank_transfer": "تحويل بنكي",
+    "cart.apple_pay": "أبل باي",
+    "cart.google_pay": "جوجل باي",
+    "cart.wallet": "محفظة",
+    "cart.klarna": "كلارنا",
+    "cart.cash_in_store": "الدفع نقدًا (في المتجر)",
+    "cart.place_order": "إتمام الطلب",
+    "cart.back_to_cart": "العودة إلى السلة",
+    "cart.order_summary": "ملخص الطلب",
+    "cart.quantity": "الكمية",
+    "cart.currency": "د.أ",
+    "cart.subtotal": "المجموع الفرعي",
+    "cart.shipping": "الشحن",
+    "cart.tax": "الضريبة",
+    "cart.discount": "الخصم",
+    "cart.total": "الإجمالي",
+    "cart.empty": "سلة التسوق فارغة.",
+    "cart.add_items": "أضف عناصر إلى سلة التسوق",
+    "cart.empty_checkout": "سلة التسوق فارغة. الرجاء إضافة عناصر قبل إتمام الشراء.",
+    "cart.is_required": "هذا الحقل مطلوب.",
+    "cart.select_payment_method": "يرجى اختيار طريقة الدفع.",
+    "cart.order_confirmation": "تأكيد الطلب",
+    "cart.order_placed": "تم تقديم الطلب بنجاح!",
+    "cart.awaiting_confirmation": "طلبك في انتظار التأكيد.",
+    "cart.awaiting_confirmation_note": "سنخطرك عبر البريد الإلكتروني بمجرد تأكيد الطلب.",
+    "cart.order_details": "تفاصيل الطلب",
+    "cart.order_number": "رقم الطلب",
+    "cart.order_date": "تاريخ الطلب",
+    "cart.order_status": "حالة الطلب",
+    "cart.payment_status": "حالة الدفع",
+    "cart.item_count": "عدد العناصر",
+    "cart.grand_total": "الإجمالي الكلي",
+    "cart.customer_information": "معلومات العميل",
+    "cart.not_provided": "غير متوفر",
+    "cart.method": "الطريقة",
+    "cart.order_items": "عناصر الطلب",
+    "cart.continue_shopping": "متابعة التسوق",
+    "cart.no_order_found": "لم يتم العثور على طلب.",
+    "cart.only_stock_left": "متبقي :stock وحدة فقط من :name.",
+    "cart.pending": "قيد الانتظار",
+    "cart.confirmed": "مؤكد",
+    "cart.shipped": "تم الشحن",
+    "cart.delivered": "تم التوصيل",
+    "cart.cancelled": "ملغى",
+    "cart.unpaid": "غير مدفوع",
+    "cart.paid": "مدفوع",
+    "cart.failed": "فشل",
+    "cart.refunded": "مسترجع",
+    "cart.not_started": "لم يبدأ",
+    "cart.in_progress": "قيد التنفيذ",
+
+    "contact.title": "تواصل معنا",
+    "contact.subtitle": "يسعدنا سماع آرائكم، يرجى ترك رسالتكم أدناه.",
+    "contact.placeholder_name": "الاسم",
+    "contact.placeholder_number": "رقم الهاتف",
+    "contact.placeholder_email": "البريد الإلكتروني",
+    "contact.placeholder_message": "الرسالة",
+    "contact.send_button": "إرسال الطلب",
+    "contact.info_title": "يحبنا أصحاب المنازل!",
+    "contact.info_description": "بيئة صحية لعائلتك. الأنظمة التي نقدمها توفر خدمة عالية الجودة مع التركيز على الأمان.",
+    "contact.default_address": "العبدلي، أم أذينة",
+    "contact.working_hours": "الأحد - الخميس: 8:00 صباحًا - 6:00 مساءً",
 
     "gallery.title": "المعرض",
     "gallery.open_album": "افتح الألبوم :album",
@@ -140,75 +228,24 @@
     "gallery.next": "التالي",
     "gallery.download": "تحميل",
 
-     "home": "الصفحة الرئيسية",
-  "products": "المنتجات",
-  "Low Stock!": "قليل من المخزون!",
-  "Availability": "التوافر",
-  "In Stock": "في المخزون",
-  "items": "منتج",
-  "Category": "الفئة",
-  "Subcategory": "الفئة الفرعية",
-  "No description available.": "لا يوجد وصف متاح.",
-  "Decrease Quantity": "خفض الكمية",
-  "Increase Quantity": "زيادة الكمية",
-  "Quantity": "الكمية",
-  "Add To Cart": "أضف إلى السلة",
-  "Out of Stock": "نفد المخزون",
-  "Share": "مشاركة",
-  "Share on Facebook": "مشاركة على فيسبوك",
-  "Share on Twitter": "مشاركة على تويتر",
-  "Share on WhatsApp": "مشاركة على واتساب",
-  "Related Products": "منتجات مشابهة",
-  "View": "عرض",
-
-
-  "cart.checkout": "إتمام الشراء",
-  "cart.already_account": "هل لديك حساب؟",
-  "cart.log_in_or": "سجّل الدخول أو",
-  "cart.join_us": "انضم إلينا الآن",
-  "cart.to_save_details": "لحفظ بياناتك والاستمتاع بعملية شراء أسرع!",
-  "cart.log_in": "تسجيل الدخول",
-  "cart.shipping_information": "معلومات الشحن",
-  "cart.full_name": "الاسم الكامل",
-  "cart.enter_full_name": "أدخل اسمك الكامل",
-  "cart.email": "البريد الإلكتروني",
-  "cart.enter_email": "أدخل بريدك الإلكتروني",
-  "cart.phone_number": "رقم الهاتف",
-  "cart.enter_phone_number": "أدخل رقم هاتفك",
-  "cart.shipping_area": "منطقة الشحن",
-  "cart.enter_shipping_area": "أدخل مدينتك أو منطقتك (اختياري)",
-  "cart.shipping_address": "عنوان الشحن",
-  "cart.enter_shipping_address": "أدخل عنوانك الكامل",
-  "cart.note": "ملاحظة",
-  "cart.optional": "اختياري",
-  "cart.enter_note": "أضف أي تعليمات أو ملاحظات للتوصيل",
-  "cart.payment_method": "طريقة الدفع",
-  "cart.cash_on_delivery": "الدفع عند الاستلام",
-  "cart.credit_debit_card": "بطاقة ائتمان/خصم",
-  "cart.paypal": "باي بال",
-  "cart.stripe": "سترايب",
-  "cart.bank_transfer": "تحويل بنكي",
-  "cart.apple_pay": "أبل باي",
-  "cart.google_pay": "جوجل باي",
-  "cart.wallet": "محفظة",
-  "cart.klarna": "كلارنا",
-  "cart.cash_in_store": "الدفع نقداً (في المتجر)",
-  "cart.place_order": "إتمام الطلب",
-  "cart.back_to_cart": "العودة إلى السلة",
-  "cart.order_summary": "ملخص الطلب",
-  "cart.quantity": "الكمية",
-  "cart.currency": "دينار",
-  "cart.subtotal": "الإجمالي الفرعي",
-  "cart.shipping": "الشحن",
-  "cart.tax": "الضريبة",
-  "cart.discount": "الخصم",
-  "cart.total": "الإجمالي",
-  "cart.empty": "سلة التسوق فارغة.",
-  "cart.add_items": "أضف عناصر إلى سلة التسوق",
-  "cart.empty_checkout": "سلة التسوق فارغة. الرجاء إضافة عناصر قبل إتمام الشراء.",
-  "cart.is_required": "هذا الحقل مطلوب.",
-  "cart.select_payment_method": "يرجى اختيار طريقة الدفع."
+    "home": "الصفحة الرئيسية",
+    "products": "المنتجات",
+    "Low Stock!": "قليل من المخزون!",
+    "Availability": "التوافر",
+    "In Stock": "في المخزون",
+    "items": "عنصر",
+    "Category": "الفئة",
+    "Subcategory": "الفئة الفرعية",
+    "No description available.": "لا يوجد وصف متاح.",
+    "Decrease Quantity": "خفض الكمية",
+    "Increase Quantity": "زيادة الكمية",
+    "Quantity": "الكمية",
+    "Add To Cart": "أضف إلى السلة",
+    "Out of Stock": "نفد المخزون",
+    "Share": "مشاركة",
+    "Share on Facebook": "مشاركة على فيسبوك",
+    "Share on Twitter": "مشاركة على تويتر",
+    "Share on WhatsApp": "مشاركة على واتساب",
+    "Related Products": "منتجات مشابهة",
+    "View": "عرض"
 }
-
-
-
